# cosmos-reason1

./: pyproject.toml
examples/video_critic/: video_critic.py
scripts/: inference.py  inference_sample.py
